tests/neg/extension-method-not-allowed.check
-- Error: tests/neg/extension-method-not-allowed.scala:3:8 -------------------------------------------------------------
3 |    def (c: T).f: T = ??? // error : No extension method allowed here
  |    ^^^^^^^^^^^^^^^^^^^^^
  |    no extension method allowed here since leading parameter was already given
